--- a/scss/components/_slick.scss
+++ b/scss/components/_slick.scss
@@ -111,9 +111,9 @@
   z-index: 99;
 }
 .slick-next {
-  background-image: url("../images/next_arrow.svg");
+  background-image: url("./images/next_arrow.svg");
   right: 0;
 }
 .slick-prev {
-  background-image: url("../images/prev_arrow.svg");
+  background-image: url("./images/prev_arrow.svg");
 }
